--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,14 +50,8 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-nuget
 
-      - name: Install dependencies
-        run: dotnet restore
-
-      - name: Build
-        run: dotnet build --configuration Release --no-restore
-      
       - name: Publish
-        run: dotnet publish --configuration ${{ matrix.configuration }} --framework net5 --output bin --runtime ${{ matrix.runtime }} --self-contained --no-restore
+        run: dotnet publish --configuration ${{ matrix.configuration }} --framework net5 --output bin --runtime ${{ matrix.runtime }} --self-contained
         
       - run: ls /home/runner/work/CDT.LIV.MonoGameClient/CDT.LIV.MonoGameClient/Zilon.Core/Zilon.Client/Assets/Resources/Schemes/
 
