--- a/CDT.LIV.Game/CDT.LIV.MonoGameClient/CDT.LIV.MonoGameClient.csproj
+++ b/CDT.LIV.Game/CDT.LIV.MonoGameClient/CDT.LIV.MonoGameClient.csproj
@@ -5,7 +5,8 @@
     <PublishReadyToRun>false</PublishReadyToRun>
     <TieredCompilation>false</TieredCompilation>
     <PublishSingleFile>true</PublishSingleFile>
-    <PublishTrimmed>true</PublishTrimmed>
+    <!-- PublishTrimmed have to be false. Because GH Actions thrws error about optimization until trimming is true. -->
+    <PublishTrimmed>false</PublishTrimmed>
     <Nullable>enable</Nullable>
   </PropertyGroup>
   <PropertyGroup>
