--- a/Zilon.Core/Zilon.Core.Benchmarks.Common/Zilon.Core.Benchmarks.Common.csproj
+++ b/Zilon.Core/Zilon.Core.Benchmarks.Common/Zilon.Core.Benchmarks.Common.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>netstandard2.0</TargetFramework>
+        <TargetFramework>net5</TargetFramework>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="BenchmarkDotNet" Version="0.12.1" />
