--- a/.github/workflows/build-text-client.yml
+++ b/.github/workflows/build-text-client.yml
@@ -1,12 +1,13 @@
-name: Build Text Client
+name: Build game clients
 
 on:
-  pull_request:
+  push:
     branches:
       - master
     tags:
       - 'v*.*.*'
-  push:
+  pull_request:
+    types: [opened, synchronize, reopened, closed]
     branches:
       - master
     tags:
@@ -20,21 +21,43 @@ jobs:
       matrix:
         project:
           - Zilon.TextClient
+          - CDT.LAST.MonoGameClient
         configuration:
           - Release
         runtime:
-          - win10-x64
-          - ubuntu.16.10-x64
+          - win-x64
+          - linux-x64
     steps:
       - uses: actions/checkout@v2
-      - name: Setup .NET Core
+
+      - name: Setup .NET5
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '3.1.x'
-      - run: dotnet publish Zilon.Core/${{ matrix.project }}/${{ matrix.project }}.csproj --configuration ${{ matrix.configuration }} --framework netcoreapp3.1 --output bin --runtime ${{ matrix.runtime }} --self-contained true /p:DebugType=None /p:DebugSymbols=false /p:PublishSingleFile=true
+          dotnet-version: '5.0.100'
+
+      - name: Setup .NET 3.1
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '3.1'
+
+      - uses: actions/cache@v2
+        with:
+          path: ~/.nuget/packages
+          # Look to see if there is a cache hit for the corresponding requirements file
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-nuget-
+
+      - name: Publish ${{ matrix.project }} ${{ matrix.configuration }} ${{ matrix.runtime }}
+        run: dotnet publish Zilon.Core/${{ matrix.project }}/${{ matrix.project }}.csproj --configuration ${{ matrix.configuration }} --framework net5 --output bin --runtime ${{ matrix.runtime }} --self-contained true /p:DebugType=None /p:DebugSymbols=false /p:PublishSingleFile=true
+        
+      - if: contains(['MonoGameClient'],matrix.project)
+        name: Copy schemes
+        run: cp -a /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/Zilon.Core/Zilon.Client/Assets/Resources/Schemes/. /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/CDT.LIV.Game/bin/Content/Schemes/
+      
       - uses: actions/upload-artifact@v1
         with:
-          name: TextClient
+          name: ${{ matrix.project }}
           path: bin
   buildDebug:
     name: Build debug text client
@@ -43,19 +66,41 @@ jobs:
       matrix:
         project:
           - Zilon.TextClient
+          - CDT.LAST.MonoGameClient
         configuration:
           - Debug
         runtime:
-          - win10-x64
-          - ubuntu.16.10-x64
+          - win-x64
+          - linux-x64
     steps:
       - uses: actions/checkout@v2
-      - name: Setup .NET Core
+
+      - name: Setup .NET5
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '3.1.x'
-      - run: dotnet publish Zilon.Core/${{ matrix.project }}/${{ matrix.project }}.csproj --configuration ${{ matrix.configuration }} --framework netcoreapp3.1 --output bin --runtime ${{ matrix.runtime }} --no-self-contained
+          dotnet-version: '5.0.100'
+
+      - name: Setup .NET 3.1
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '3.1'
+
+      - uses: actions/cache@v2
+        with:
+          path: ~/.nuget/packages
+          # Look to see if there is a cache hit for the corresponding requirements file
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/packages.lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-nuget-
+
+      - name: Publish ${{ matrix.project }} ${{ matrix.configuration }} ${{ matrix.runtime }}
+        run: dotnet publish Zilon.Core/${{ matrix.project }}/${{ matrix.project }}.csproj --configuration ${{ matrix.configuration }} --framework netcoreapp3.1 --output bin --runtime ${{ matrix.runtime }} --no-self-contained
+      
+      - if: contains(['MonoGameClient'],matrix.project)
+        name: Copy schemes
+        run: cp -a /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/Zilon.Core/Zilon.Client/Assets/Resources/Schemes/. /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/CDT.LIV.Game/bin/Content/Schemes/
+      
       - uses: actions/upload-artifact@v1
         with:
-          name: TextClient
+          name: ${{ matrix.project }}
           path: bin
