--- a/.github/workflows/build-client.yml
+++ b/.github/workflows/build-client.yml
@@ -65,5 +65,5 @@ jobs:
       
       - uses: actions/upload-artifact@v1
         with:
-          name: ${{ matrix.project }}-Release
+          name: ${{ matrix.project }}-${{ matrix.configuration }}-${{ matrix.runtime }}
           path: bin
