--- a/.github/workflows/build-client.yml
+++ b/.github/workflows/build-client.yml
@@ -52,15 +52,15 @@ jobs:
             ${{ runner.os }}-nuget-
 
       - name: Publish ${{ matrix.project }} ${{ matrix.configuration }} ${{ matrix.runtime }}
-        if: ${{ contains('Release', matrix.configuration) }}
+        if: ${{ contains(matrix.configuration, 'Release') }}
         run: dotnet publish Zilon.Core/${{ matrix.project }}/${{ matrix.project }}.csproj --configuration ${{ matrix.configuration }} --framework net5 --output bin --runtime ${{ matrix.runtime }} --self-contained true /p:DebugType=None /p:DebugSymbols=false /p:PublishSingleFile=true
 
       - name: Publish ${{ matrix.project }} ${{ matrix.configuration }} ${{ matrix.runtime }}
-        if: ${{ contains('Debug', matrix.configuration) }}
+        if: ${{ contains(matrix.configuration, 'Debug') }}
         run: dotnet publish Zilon.Core/${{ matrix.project }}/${{ matrix.project }}.csproj --configuration ${{ matrix.configuration }} --framework net5 --output bin --runtime ${{ matrix.runtime }} --no-self-contained
 
       - name: Copy scheme catalog into bin directory for ${{ matrix.project }}
-        if: ${{ contains('MonoGameClient', matrix.project) }}
+        if: ${{ contains(matrix.project, 'MonoGameClient') }}
         run: cp -a /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/Zilon.Core/Zilon.Client/Assets/Resources/Schemes/. /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/CDT.LIV.Game/bin/Content/Schemes/
       
       - uses: actions/upload-artifact@v1
