--- a/Zilon.Core/CDT.LAST.MonoGameClient/CDT.LAST.MonoGameClient.csproj
+++ b/Zilon.Core/CDT.LAST.MonoGameClient/CDT.LAST.MonoGameClient.csproj
@@ -11,7 +11,6 @@
   <PropertyGroup>
     <ApplicationIcon>Icon.ico</ApplicationIcon>
     <ApplicationManifest>app.manifest</ApplicationManifest>
-    <NeutralLanguage>en</NeutralLanguage>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="Content\bin\**" />
@@ -45,16 +44,16 @@
     <ProjectReference Include="..\Zilon.Emulation.Common\Zilon.Emulation.Common.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Update="MainScreenResource.en.Designer.cs">
+    <Compile Update="Resources\UiResources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
-      <DependentUpon>MainScreenResource.en.resx</DependentUpon>
+      <DependentUpon>UiResources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Update="MainScreenResource.en.resx">
+    <EmbeddedResource Update="Resources\UiResources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>MainScreenResource.en.Designer.cs</LastGenOutput>
+      <LastGenOutput>UiResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
 </Project>
