--- a/.github/workflows/sonar-cloud.yml
+++ b/.github/workflows/sonar-cloud.yml
@@ -15,48 +15,16 @@ on:
 jobs:
   sonarcloud:
     name: SonarCloud
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - name: sonarscan-dotnet
+        uses: highbyte/sonarscan-dotnet@v2.1.1-beta
         with:
-          # Shallow clones should be disabled for a better relevancy of analysis
-          fetch-depth: 0
-
-      # Speed-up analysis by caching the scanner workspace
-      - name: Cache SonarCloud workspace
-        uses: actions/cache@v1
-        with:
-          path: ~\.sonar\cache
-          key: ${{ runner.os }}-sonar-cache
-          restore-keys: ${{ runner.os }}-sonar-cache
-
-      # Speed-up analysis by caching the scanner installation
-      - name: Cache SonarCloud scanner
-        id: cache-sonar-scanner
-        uses: actions/cache@v1
-        with:
-          path: .\.sonar\scanner
-          key: ${{ runner.os }}-sonar-scanner
-          restore-keys: ${{ runner.os }}-sonar-scanner
-
-      - name: Install SonarCloud scanner
-        if: steps.cache-sonar-scanner.outputs.cache-hit != 'true'
-        shell: powershell
-        # The --version argument is optional. If it is omitted the latest version will be installed.
-        run: |
-          New-Item -Path .\.sonar\scanner -ItemType Directory
-          dotnet tool update dotnet-sonarscanner --tool-path .\.sonar\scanner --version 4.8.0
-
-      - name: Build
-        shell: powershell
-        env:
-          # Needed to get some information about the pull request, if any
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # The secret referenced in the command-line by SONAR_TOKEN should be generated
-          # from https://sonarcloud.io/account/security/
-          # The organization and project arguments (see /o and /k) are displayed
-          # on the project dashboard in SonarCloud.
-        run: |
-          .\.sonar\scanner\dotnet-sonarscanner begin /k:"kreghek_Zilon_Roguelike" /o:"kreghek" /d:sonar.login="${{ secrets.SONAR_TOKEN }}" /d:sonar.host.url="https://sonarcloud.io"
-          dotnet build Zilon.Core/Zilon.Core.SonarScanner.sln
-          .\.sonar\scanner\dotnet-sonarscanner end /d:sonar.login="${{ secrets.SONAR_TOKEN }}"
+          # The key of the SonarQube project
+          sonarProjectKey: kreghek_Zilon_Roguelike
+          # The name of the SonarQube project
+          sonarProjectName:  Zilon Roguelike
+          # The name of the SonarQube organization in SonarCloud. For hosted SonarQube, skip this setting.
+          sonarOrganization: kreghek
+          dotnetBuildArguments: Zilon.Core/Zilon.Core.SonarScanner.sln -c Release
+          dotnetDisableTests: true
