--- a/.github/workflows/sonar-cloud.yml
+++ b/.github/workflows/sonar-cloud.yml
@@ -29,5 +29,5 @@ jobs:
           sonarProjectName:  Zilon Roguelike
           # The name of the SonarQube organization in SonarCloud. For hosted SonarQube, skip this setting.
           sonarOrganization: kreghek
-          dotnetBuildArguments: Zilon.Core/Zilon.Core.sln
+          dotnetBuildArguments: ./Zilon.Core/Zilon.Core.sln
           dotnetDisableTests: true
