--- a/Zilon.Core/Zilon.Core.Benchmarks.CreateSector/Zilon.Core.Benchmarks.CreateSector.csproj
+++ b/Zilon.Core/Zilon.Core.Benchmarks.CreateSector/Zilon.Core.Benchmarks.CreateSector.csproj
@@ -18,6 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Zilon.Bot.Players.NetCore\Zilon.Bot.Players.NetCore.csproj" />
     <ProjectReference Include="..\Zilon.Bot.Players\Zilon.Bot.Players.csproj" />
     <ProjectReference Include="..\Zilon.Core.Benchmarks.Common\Zilon.Core.Benchmarks.Common.csproj" />
     <ProjectReference Include="..\Zilon.Core.Tests.Common\Zilon.Core.Tests.Common.csproj" />
