--- a/.github/workflows/build-client.yml
+++ b/.github/workflows/build-client.yml
@@ -56,6 +56,11 @@ jobs:
       - name: Publish ${{ matrix.project }} ${{ matrix.configuration }} ${{ matrix.runtime }}
         if: ${{ contains(matrix.configuration, 'Debug') }}
         run: dotnet publish Zilon.Core/${{ matrix.project }}/${{ matrix.project }}.csproj --configuration ${{ matrix.configuration }} --framework net5 --output bin --runtime ${{ matrix.runtime }} --no-self-contained
+      
+      # This step is nessesary because CopySchemeCatalogToClientBin target in csproj doesn't perform in CI/CD.
+      - name: Copy scheme catalog into bin directory for ${{ matrix.project }}
+        if: ${{ contains(matrix.project, 'MonoGameClient') }}
+        run: cp -a /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/Zilon.Client/Assets/Resources/Schemes/. /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/bin/Content/Schemes/
 
       - uses: actions/upload-artifact@v2
         with:
