--- a/Zilon.Core/CDT.LAST.MonoGameClient/CDT.LAST.MonoGameClient.csproj
+++ b/Zilon.Core/CDT.LAST.MonoGameClient/CDT.LAST.MonoGameClient.csproj
@@ -56,7 +56,7 @@
       <LastGenOutput>UiResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-    <Target Name="CopySchemeCatalogToClientBin" AfterTargets="Build;Publish">
+    <Target Name="CopySchemeCatalogToClientBin" BeforeTargets="PrepareForBuild">
         <ItemGroup>
             <SchemeCatalogFiles Include="$(ProjectDir)../../Zilon.Client/Assets/Resources/Schemes/**/*.json" />
         </ItemGroup>
