--- a/.github/workflows/mutation-test-stryker.yml
+++ b/.github/workflows/mutation-test-stryker.yml
@@ -1,8 +1,6 @@
 name: Mutation Tests using Stryker.NET
 
-on:
-  schedule:
-    - cron: '0 0 * * *' # Nightly
+on: [push]
 
 env:
   REPORT_RESULT_PATH: /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/Zilon.Core/Zilon.Core.Tests/StrykerOutput
@@ -20,10 +18,10 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '5.0.100'
+        dotnet-version: '5.0.201'
     - name: Setup Stryker
       run: |
-        dotnet tool install -g dotnet-stryker --version 0.22.0
+        dotnet tool install -g dotnet-stryker --version 0.22.4
     - name: Kill the mutants!
       env:
         ZILON_LIV_SCHEME_CATALOG: /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/Zilon.Client/Assets/Resources/Schemes
