Fix Sonar Issues - [Dups]

--- a/Zilon.Core/Zilon.Emulation.Common/Zilon.Emulation.Common.csproj
+++ b/Zilon.Core/Zilon.Emulation.Common/Zilon.Emulation.Common.csproj
@@ -12,6 +12,7 @@
         </PackageReference>
 	</ItemGroup>
 	<ItemGroup>
+	  <ProjectReference Include="..\Zilon.Bot.Players.NetCore\Zilon.Bot.Players.NetCore.csproj" />
 	  <ProjectReference Include="..\Zilon.Bot.Players\Zilon.Bot.Players.csproj" />
 	  <ProjectReference Include="..\Zilon.Core\Zilon.Core.csproj" />
 	  <ProjectReference Include="..\Zilon.DependencyInjection\Zilon.DependencyInjection.csproj" />
