--- a/.github/workflows/build-client.yml
+++ b/.github/workflows/build-client.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Setup .NET 3.1
         uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: '3.1.x'
+          dotnet-version: '3.1'
 
       - uses: actions/cache@v2
         with:
