--- a/Zilon.Core/CDT.LAST.MonoGameClient/CDT.LAST.MonoGameClient.csproj
+++ b/Zilon.Core/CDT.LAST.MonoGameClient/CDT.LAST.MonoGameClient.csproj
@@ -62,7 +62,6 @@
         </ItemGroup>
         <Message Text="Copy the Scheme Catalog from $(SchemeCatalogFiles) to $(TargetDir)." />
         <RemoveDir Directories="$(TargetDir)/Content/Schemes" />
-        <Copy SourceFiles="@(SchemeCatalogFiles)"
-              DestinationFiles="@(SchemeCatalogFiles->'$(TargetDir)/Content/Schemes/%(RecursiveDir)%(Filename)%(Extension)')"/>
+        <Copy SourceFiles="@(SchemeCatalogFiles)" DestinationFiles="@(SchemeCatalogFiles->'$(TargetDir)/Content/Schemes/%(RecursiveDir)%(Filename)%(Extension)')" />
     </Target>
 </Project>
