Fix test suite name

--- a/.github/workflows/bot-tests.yml
+++ b/.github/workflows/bot-tests.yml
@@ -28,7 +28,7 @@ jobs:
           - Release
           - Debug
         test_suite:
-          - Zilon.Core.DevelopmentTests
+          - Zilon.Bot.Players.DevelopmentTests
         report_format:
           - Html
 
