--- a/Zilon.Client/Packages/manifest.json
+++ b/Zilon.Client/Packages/manifest.json
@@ -37,7 +37,6 @@
     "com.unity.modules.vehicles": "1.0.0",
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.localization": "0.10.0-preview",
-	"com.modesttree.zenject": "https://github.com/MeikelLP/Zenject.git#upm"
+    "com.unity.localization": "0.10.0-preview"
   }
 }
