--- a/.github/workflows/bench.yml
+++ b/.github/workflows/bench.yml
@@ -1,31 +1,20 @@
 name: Benchmarks
 
 on:
-   push:
-    branches:
-      - benchs-netcore31
+  schedule:
+    - cron:  '0 0 * * *'
 
 jobs:
   buildCore:
     name: Run benchs
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
       matrix:
         bench_project:
           - Zilon.Core.Benchmarks.Gameplay
-          - Zilon.Core.Benchmarks.Fow
-          - Zilon.Core.Benchmarks.CreateSector
-          - Zilon.Core.Benchmarks.MassGameplay
         include:
           - bench_project: Zilon.Core.Benchmarks.Gameplay
-            bench_filter: GamePlayBench
-          - bench_project: Zilon.Core.Benchmarks.Fow
-            bench_filter: FowDataBench
-          - bench_project: Zilon.Core.Benchmarks.CreateSector
-            bench_filter: CreateCellularAutomatonSectorBench
-          - bench_project: Zilon.Core.Benchmarks.MassGameplay
-            bench_filter: MassGamePlayBench
+          - bench_filter: GamePlayBench
     steps:
       - uses: actions/checkout@v2
       - name: Setup .NET Core
