--- a/.github/workflows/coverage-codecov.yml
+++ b/.github/workflows/coverage-codecov.yml
@@ -1,4 +1,4 @@
-name: Test and ReportGenerator report
+name: Test and Codecov report
 
 on:
   pull_request:
@@ -14,7 +14,6 @@ on:
 
 env:
   TEST_RESULT_PATH: /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/TestResults/
-  REPORT_RESULT_PATH: /home/runner/work/ReportResult/
 
 jobs:
 
@@ -26,8 +25,6 @@ jobs:
         test_suite:
           - Zilon.Core.UnitTests
           - Zilon.Core.FunctionalTests
-        report_format:
-          - Html
 
     steps:
     - uses: actions/checkout@v2
@@ -43,14 +40,14 @@ jobs:
       run: |
         cd ./Zilon.Core
         dotnet test ${{ matrix.test_suite }}.sln --configuration Release /p:CollectCoverage=true /p:CoverletOutput=${{env.TEST_RESULT_PATH}} /p:CoverletOutputFormat=\"cobertura,json\" /p:MergeWith="${{env.TEST_RESULT_PATH}}coverage.json" /p:SkipAutoProps=true /p:ExcludeByAttribute=\"Obsolete,GeneratedCode,CompilerGenerated\" /p:ExcludeByFile="**/Zilon.Core.Tests.Common/*.cs" /maxcpucount:1
-    - name: Generat report ${{ matrix.test_suite }} via ReportGenerator in ${{ matrix.report_format }} format
-      run: |
-        dotnet tool install -g dotnet-reportgenerator-globaltool
-        reportgenerator "-reports:${{env.TEST_RESULT_PATH}}coverage.cobertura.xml" "-targetdir:${{ env.REPORT_RESULT_PATH }}" -reporttypes:${{ matrix.report_format }}
-    - uses: actions/upload-artifact@v2
+    - name: Publish coverage report to codecov.io
+      uses: codecov/codecov-action@v1
       with:
-        name: Report${{ matrix.test_suite }}
-        path: ${{ env.REPORT_RESULT_PATH }}
+        flags: ${{ matrix.test_suite }}
+        directory: ${{env.TEST_RESULT_PATH}}
+        working-directory: ${{env.TEST_RESULT_PATH}}
+        files: ./coverage.cobertura.xml
+        fail_ci_if_error: true
 
   test_debug:
     runs-on: ubuntu-latest
@@ -60,8 +57,6 @@ jobs:
         test_suite:
           - Zilon.Core.UnitTests
           - Zilon.Core.FunctionalTests
-        report_format:
-          - Html
 
     steps:
     - uses: actions/checkout@v2
