--- a/.github/workflows/coverage-coveralls.yml
+++ b/.github/workflows/coverage-coveralls.yml
@@ -1,4 +1,4 @@
-name: Test and ReportGenerator report
+name: Test and Coveralls report
 
 on:
   pull_request:
@@ -14,7 +14,6 @@ on:
 
 env:
   TEST_RESULT_PATH: /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/TestResults/
-  REPORT_RESULT_PATH: /home/runner/work/ReportResult/
 
 jobs:
 
@@ -26,8 +25,6 @@ jobs:
         test_suite:
           - Zilon.Core.UnitTests
           - Zilon.Core.FunctionalTests
-        report_format:
-          - Html
 
     steps:
     - uses: actions/checkout@v2
@@ -42,15 +39,14 @@ jobs:
         DOTNET_CLI_TELEMETRY_OUTPUT: 1
       run: |
         cd ./Zilon.Core
-        dotnet test ${{ matrix.test_suite }}.sln --configuration Release /p:CollectCoverage=true /p:CoverletOutput=${{env.TEST_RESULT_PATH}} /p:CoverletOutputFormat=\"cobertura,json\" /p:MergeWith="${{env.TEST_RESULT_PATH}}coverage.json" /p:SkipAutoProps=true /p:ExcludeByAttribute=\"Obsolete,GeneratedCode,CompilerGenerated\" /p:ExcludeByFile="**/Zilon.Core.Tests.Common/*.cs" /maxcpucount:1
-    - name: Generat report ${{ matrix.test_suite }} via ReportGenerator in ${{ matrix.report_format }} format
-      run: |
-        dotnet tool install -g dotnet-reportgenerator-globaltool
-        reportgenerator "-reports:${{env.TEST_RESULT_PATH}}coverage.cobertura.xml" "-targetdir:${{ env.REPORT_RESULT_PATH }}" -reporttypes:${{ matrix.report_format }}
-    - uses: actions/upload-artifact@v2
+        dotnet test ${{ matrix.test_suite }}.sln --configuration Release /p:CollectCoverage=true /p:CoverletOutput=${{env.TEST_RESULT_PATH}} /p:CoverletOutputFormat=\"lcov,json\" /p:MergeWith="${{env.TEST_RESULT_PATH}}coverage.json" /p:SkipAutoProps=true /p:ExcludeByAttribute=\"Obsolete,GeneratedCode,CompilerGenerated\" /p:ExcludeByFile="**/Zilon.Core.Tests.Common/*.cs" /maxcpucount:1
+    - name: Publish coverage report to coveralls.io
+      uses: coverallsapp/github-action@v1.1.2
       with:
-        name: Report${{ matrix.test_suite }}
-        path: ${{ env.REPORT_RESULT_PATH }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        path-to-lcov: ${{env.TEST_RESULT_PATH}}coverage.info
+        parallel: true
+        flag-name: ${{ matrix.test_suite }}
 
   test_debug:
     runs-on: ubuntu-latest
@@ -60,8 +56,6 @@ jobs:
         test_suite:
           - Zilon.Core.UnitTests
           - Zilon.Core.FunctionalTests
-        report_format:
-          - Html
 
     steps:
     - uses: actions/checkout@v2
@@ -77,3 +71,13 @@ jobs:
       run: |
         cd ./Zilon.Core
         dotnet test ${{ matrix.test_suite }}.sln --configuration Debug
+
+  finish:
+    needs: test_release
+    runs-on: ubuntu-latest
+    steps:
+    - name: Coveralls Finished
+      uses: coverallsapp/github-action@v1.1.2
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        parallel-finished: true
