Exclude dependabot branches from sonar analysis
To avoid error Environment parameter SONAR_TOKEN is required
The variable is private and invisible for dependabot.

--- a/.github/workflows/sonar-cloud.yml
+++ b/.github/workflows/sonar-cloud.yml
@@ -11,6 +11,8 @@ on:
       - opened
       - synchronize
       - reopened
+    branches-ignore:
+      - remotes/origin/dependabot/nuget/**
 env:
     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
