Fix branch excluding

--- a/.github/workflows/sonar-cloud.yml
+++ b/.github/workflows/sonar-cloud.yml
@@ -12,7 +12,7 @@ on:
       - synchronize
       - reopened
     branches-ignore:
-      - remotes/origin/dependabot/nuget/**
+      - dependabot/nuget/**
 env:
     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
