--- a/Zilon.Core/CDT.LAST.MonoGameClient/CDT.LAST.MonoGameClient.csproj
+++ b/Zilon.Core/CDT.LAST.MonoGameClient/CDT.LAST.MonoGameClient.csproj
@@ -62,6 +62,9 @@
       <LastGenOutput>UiResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Content\Sprites\game-objects\Monographics\Outlined\" />
+  </ItemGroup>
     <Target Name="CopySchemeCatalogToClientBin" BeforeTargets="PrepareForBuild">
         <ItemGroup>
             <SchemeCatalogFiles Include="$(ProjectDir)../../Zilon.Client/Assets/Resources/Schemes/**/*.json" />
