Rus description of build in traits

--- a/Zilon.Client/Assets/Resources/Schemes/Perks/character-traits/increased-perspiration.json
+++ b/Zilon.Client/Assets/Resources/Schemes/Perks/character-traits/increased-perspiration.json
@@ -3,5 +3,9 @@
     "Ru": "Повышенная потливость",
 	"En": "Increased perspiration"
   },
+  "Description":
+  {
+    "Ru": "Ваша одежда постоянно мокрая. Вам обычно не очень комфортно.\nЛадошки мокрые. Это мешает."
+  },
   "IsBuildIn": true
 }
