--- a/Zilon.Client/Assets/Resources/Schemes/Perks/character-traits/sex-appeal.json
+++ b/Zilon.Client/Assets/Resources/Schemes/Perks/character-traits/sex-appeal.json
@@ -3,5 +3,9 @@
     "Ru": "Сексапильность",
 	"En": "Sex appeal"
   },
+  "Description":
+  {
+    "Ru": "У вас очень аппетитная внешность.\nВозможно, это когда-нибудь вам пригодится в жестоком диком мире."
+  },
   "IsBuildIn": true
 }
