--- a/.github/workflows/build-client.yml
+++ b/.github/workflows/build-client.yml
@@ -3,7 +3,15 @@ name: Build game clients
 on:
   push:
     branches:
-      - develop-gdw21-release
+      - master
+    tags:
+      - 'v*.*.*'
+  pull_request:
+    types: [opened, synchronize, reopened]
+    branches:
+      - master
+    tags:
+      - 'v*.*.*'
 
 jobs:
   build:
@@ -12,12 +20,14 @@ jobs:
     strategy:
       matrix:
         project:
+          - Zilon.TextClient
           - CDT.LAST.MonoGameClient
         configuration:
           - Release
           - Debug
         runtime:
           - win-x64
+          - linux-x64
     steps:
       - uses: actions/checkout@v2
 
