--- a/Zilon.Client/Assets/Resources/Schemes/Perks/character-traits/increased-perspiration.json
+++ b/Zilon.Client/Assets/Resources/Schemes/Perks/character-traits/increased-perspiration.json
@@ -5,7 +5,8 @@
   },
   "Description":
   {
-    "Ru": "Ваша одежда постоянно мокрая. Вам обычно не очень комфортно.\nЛадошки мокрые. Это мешает."
+    "Ru": "Ваша одежда постоянно мокрая. Вам обычно не очень комфортно.\nЛадошки мокрые. Это мешает.",
+	"En": "Your clothes are constantly wet. You are usually not very comfortable.\nThe hands are wet. It gets in the way.",
   },
   "IsBuildIn": true
 }
