--- a/.github/workflows/build-client.yml
+++ b/.github/workflows/build-client.yml
@@ -62,6 +62,20 @@ jobs:
         if: ${{ contains(matrix.project, 'MonoGameClient') }}
         run: cp -a /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/Zilon.Client/Assets/Resources/Schemes/. /home/runner/work/Zilon_Roguelike/Zilon_Roguelike/bin/Content/Schemes/
 
+      - name: Generate build number
+        id: buildnumber
+        uses: einaregilsson/build-number@v3 
+        with:
+          token: ${{secrets.github_token}}
+
+      - name: Write version to file
+        uses: DamianReeves/write-file-action
+        with:
+          path: bin/version.txt
+          contents: |
+            echo "Hello World!"
+          write-mode: override
+
       - uses: actions/upload-artifact@v2
         with:
           name: ${{ matrix.project }}-${{ matrix.configuration }}-${{ matrix.runtime }}
