--- a/.github/workflows/build-client.yml
+++ b/.github/workflows/build-client.yml
@@ -69,7 +69,7 @@ jobs:
           token: ${{secrets.github_token}}
 
       - name: Write version to file
-        uses: DamianReeves/write-file-action
+        uses: DamianReeves/write-file-action@v1.0
         with:
           path: bin/version.txt
           contents: |
