--- a/.github/workflows/build-client.yml
+++ b/.github/workflows/build-client.yml
@@ -73,7 +73,8 @@ jobs:
         with:
           path: bin/version.txt
           contents: |
-            echo "Hello World!"
+            ver.2.5.8.${{ steps.buildnumber.outputs.build_number }}
+            ${{ GITHUB_SHA }}
           write-mode: overwrite
 
       - uses: actions/upload-artifact@v2
