Nightly artifact cleaning

--- a/.github/workflows/remove-old-artifacts.yml
+++ b/.github/workflows/remove-old-artifacts.yml
@@ -1,6 +1,9 @@
 name: Remove old artifacts
 
-on: [push]
+on:
+  schedule:
+    # Nightly
+    - cron: '0 0 * * *'
 
 jobs:
   remove-old-artifacts:
