Only master under linter

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,6 +1,9 @@
 name: Code Linter
 
-on: push
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   # Set the job key. The key is displayed as the job name
