--- a/.github/workflows/remove-old-artifacts.yml
+++ b/.github/workflows/remove-old-artifacts.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Remove old artifacts
       uses: c-hive/gha-remove-artifacts@v1
       with:
-        age: '1 month'
+        age: '3 days'
         # Optional inputs
         # skip-tags: true
         skip-recent: 3
